complete folder reorganization

--- a/Results/report.html
+++ b/Results/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,24861],[],[[5,0,6,[7],[0,403,24455,8],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,26431],[],[[5,0,6,[7],[1,440,25987],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Webshop","*C:\\development\\Robot-Task_1\\tests\\webshop.robot","*../tests/webshop.robot","*<p>Automation testing example for website: Automation Exercise\x3c/p>","*Signup Process With Empty Field Negativ Scenario","*<p>Test case for first step for signup new user EMPTY FIELD\x3c/p>","*Test 10","*Page should not have contained element 'xpath=//*[@id=\"form\"]/div/div/div/h2/b'."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Delete Account","*C:\\development\\Robot-Task_1\\tests\\deleteaccount\\delete_account.robot","*../tests/deleteaccount/delete_account.robot","*<p>Test cases for signup user on website\x3c/p>","*Delete User Account","*<p>Test case for delete user account  and rediretct to home page\x3c/p>","*Test 1"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:24","fail":1,"label":"All Tests","pass":0,"skip":0}],[{"elapsed":"00:00:24","fail":1,"label":"Test 10","pass":0,"skip":0}],[{"elapsed":"00:00:25","fail":1,"id":"s1","label":"Webshop","name":"Webshop","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:26","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:26","fail":0,"label":"Test 1","pass":1,"skip":0}],[{"elapsed":"00:00:26","fail":0,"id":"s1","label":"Delete Account","name":"Delete Account","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1752735588695;
+window.output["baseMillis"] = 1752833227129;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 24901;
+window.output["generated"] = 26466;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
