--- a/Results/report.html
+++ b/Results/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,27468],[],[[4,0,5,[],[1,384,27079],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,38098],[[4,5,6,0,[],[1,52,38038],[[7,8,9,0,[],[1,58,38024],[[7,10,11,12,[],[1,63,38011],[],[[13,0,0,[],[1,858,11801],[]],[14,0,0,[],[1,12663,25404],[]]],[],[2,2,0,0]]],[],[],[2,2,0,0]]],[],[],[2,2,0,0]]],[],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*CheckoutAuth","*C:\\development\\Robot-Task_1\\tests\\CheckoutAuth\\CheckoutAuth.robot","*../tests/CheckoutAuth/CheckoutAuth.robot","*Logged User Can Access Checkout From Cart","*<p>Logged in user can complete the order and payment for the product\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Robot-Task 1","*C:\\development\\Robot-Task_1","*..","*Tests","*C:\\development\\Robot-Task_1\\Tests","*../Tests","*Login","*C:\\development\\Robot-Task_1\\Tests\\Login","*../Tests/Login","*C:\\development\\Robot-Task_1\\Tests\\Login\\Login.robot","*../Tests/Login/Login.robot","*<p>Test cases for login user on website\x3c/p>","*Navigate from Landing Page to Login Page","*User Can Login Successfully"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:27","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:27","fail":0,"id":"s1","label":"CheckoutAuth","name":"CheckoutAuth","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:37","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:38","fail":0,"id":"s1","label":"Robot-Task 1","name":"Robot-Task 1","pass":2,"skip":0},{"elapsed":"00:00:38","fail":0,"id":"s1-s1","label":"Robot-Task 1.Tests","name":"Tests","pass":2,"skip":0},{"elapsed":"00:00:38","fail":0,"id":"s1-s1-s1","label":"Robot-Task 1.Tests.Login","name":"Login","pass":2,"skip":0},{"elapsed":"00:00:38","fail":0,"id":"s1-s1-s1-s1","label":"Robot-Task 1.Tests.Login.Login","name":"Login","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1753275579144;
+window.output["baseMillis"] = 1753342734450;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 27495;
+window.output["generated"] = 38155;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
