--- a/Results/report.html
+++ b/Results/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,38098],[[4,5,6,0,[],[1,52,38038],[[7,8,9,0,[],[1,58,38024],[[7,10,11,12,[],[1,63,38011],[],[[13,0,0,[],[1,858,11801],[]],[14,0,0,[],[1,12663,25404],[]]],[],[2,2,0,0]]],[],[],[2,2,0,0]]],[],[],[2,2,0,0]]],[],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,52784],[],[[5,0,6,[7],[1,432,9860],[]],[8,0,9,[10],[1,10295,42483],[]]],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Robot-Task 1","*C:\\development\\Robot-Task_1","*..","*Tests","*C:\\development\\Robot-Task_1\\Tests","*../Tests","*Login","*C:\\development\\Robot-Task_1\\Tests\\Login","*../Tests/Login","*C:\\development\\Robot-Task_1\\Tests\\Login\\Login.robot","*../Tests/Login/Login.robot","*<p>Test cases for login user on website\x3c/p>","*Navigate from Landing Page to Login Page","*User Can Login Successfully"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Signup","*C:\\development\\Robot-Task_1\\tests\\signup\\signup.robot","*../tests/signup/signup.robot","*<p>Test cases for signup user on website\x3c/p>","*Navigate from Landing Page and Complete First Step of Signup","*<p>Test case for loading landing page and navigate to Signup and login page\x3c/p>","*Test 1","*User Can Sign Up Successfully","*<p>Test case for completing the registration of a new user\x3c/p>","*Test 2"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:37","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:38","fail":0,"id":"s1","label":"Robot-Task 1","name":"Robot-Task 1","pass":2,"skip":0},{"elapsed":"00:00:38","fail":0,"id":"s1-s1","label":"Robot-Task 1.Tests","name":"Tests","pass":2,"skip":0},{"elapsed":"00:00:38","fail":0,"id":"s1-s1-s1","label":"Robot-Task 1.Tests.Login","name":"Login","pass":2,"skip":0},{"elapsed":"00:00:38","fail":0,"id":"s1-s1-s1-s1","label":"Robot-Task 1.Tests.Login.Login","name":"Login","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:52","fail":0,"label":"All Tests","pass":2,"skip":0}],[{"elapsed":"00:00:10","fail":0,"label":"Test 1","pass":1,"skip":0},{"elapsed":"00:00:42","fail":0,"label":"Test 2","pass":1,"skip":0}],[{"elapsed":"00:00:53","fail":0,"id":"s1","label":"Signup","name":"Signup","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1753342734450;
+window.output["baseMillis"] = 1753356213797;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 38155;
+window.output["generated"] = 52825;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
